
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {unsigned int segment; unsigned int ist; int p; unsigned int dpl; unsigned int type; scalar_t__ zero1; int offset_high; scalar_t__ zero0; int offset_middle; int offset_low; } ;
typedef TYPE_1__ gate_desc ;


 int PTR_HIGH (unsigned long) ;
 int PTR_LOW (unsigned long) ;
 int PTR_MIDDLE (unsigned long) ;
 int dump_gate (TYPE_1__*) ;

__attribute__((used)) static inline void pack_gate(gate_desc *gate, unsigned type, unsigned long func,
                             unsigned dpl, unsigned ist, unsigned seg)
{
  gate->offset_low = PTR_LOW(func);
  gate->offset_middle = PTR_MIDDLE(func);
  gate->segment = seg;
  gate->ist = ist;
  gate->p = 1;
  gate->dpl = dpl;
  gate->zero0 = 0;
  gate->type = type;

  gate->offset_high = PTR_HIGH(func);
  gate->zero1 = 0;

  dump_gate(gate);
}
